v0.12.5/_sources/_generated/groups/firewalls.rst.txt
.. role:: action-subheading
.. role:: action-subheading-description
.. role:: action-argument-required

Firewalls
=========

This section details Firewall-related Linode CLI commands.

.. _firewalls_create:

`create <https://techdocs.akamai.com/linode-api/reference/post-firewalls>`_
---------------------------------------------------------------------------


Creates a Firewall to filter network traffic.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls create [-h] [--rules.inbound inbound]
    	[--rules.outbound outbound]
    	[--rules.inbound_policy inbound_policy]
    	[--rules.outbound_policy outbound_policy]
    	[--devices.linodes linodes]
    	[--devices.nodebalancers nodebalancers] [--label label]
    	[--tags tags]


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls create \
    	--label example-firewall \
    	--rules.outbound_policy ACCEPT \
    	--rules.inbound_policy DROP \
    	--rules.inbound '[{"protocol": "TCP", "ports": "22, 80, 8080, 443", "addresses": {"ipv4": ["192.0.2.0/24", "198.51.100.2/32"], "ipv6": ["2001:DB8::/128"]}, "action": "ACCEPT"}]' \
    	--rules.outbound '[{"protocol": "TCP", "ports": "49152-65535", "addresses": {"ipv4": ["192.0.2.0/24", "198.51.100.2/32"],"ipv6": ["2001:DB8::/128"]}, "action": "DROP", "label": "outbound-rule123", "description": "An example outbound rule description."}]'


.. cssclass:: action-subheading

    .. rubric:: Arguments

:action-subheading-description:`Additional fields used to execute this request.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 10 65

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--label`
      - :action-argument-required:`Yes`
      - string
      - The Firewall's label, for display purposes only.
    * - :code:`--rules.inbound_policy`
      - :action-argument-required:`Yes`
      - string
      - The default behavior for inbound traffic.
    * - :code:`--rules.outbound_policy`
      - :action-argument-required:`Yes`
      - string
      - The default behavior for outbound traffic.
    * - :code:`--created`
      - No
      - string
      - When this Firewall was created.
    * - :code:`--devices.linodes`
      - No
      - array[integer]
      - An array of Linode IDs.
    * - :code:`--devices.nodebalancers`
      - No
      - array[integer]
      - An array containing a NodeBalancer ID.
    * - :code:`--id`
      - No
      - integer
      - The Firewall's unique ID.
    * - :code:`--rules.inbound`
      - No
      - object
      - The inbound rules for the firewall, as a JSON array.
    * - :code:`--rules.outbound`
      - No
      - object
      - The outbound rules for the firewall, as a JSON array.
    * - :code:`--status`
      - No
      - string
      - The status of this Firewall.
    * - :code:`--tags`
      - No
      - array[string]
      - An array of tags applied to this object.
    * - :code:`--updated`
      - No
      - string
      - When this Firewall was last updated.


------------

.. _firewalls_delete:

`delete <https://techdocs.akamai.com/linode-api/reference/delete-firewall>`_
----------------------------------------------------------------------------


Delete a Firewall resource by its ID.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls delete [-h] firewallId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls delete 123


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.


------------

.. _firewalls_list:

`list <https://techdocs.akamai.com/linode-api/reference/get-firewalls>`_
------------------------------------------------------------------------


Returns a paginated list of accessible Firewalls.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls list [-h] [--tags [tags] ] [--id id]
    	[--created created] [--label label] [--updated updated]
    	[--order-by {tags,id,created,label,updated}]
    	[--order {asc,desc}]


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls list


.. rubric:: Filterable Attributes

`Arguments used to define a filter for response entries.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`--created`
      - *string*
      - When this Firewall was created.
    * - :code:`--id`
      - *integer*
      - The Firewall's unique ID.
    * - :code:`--label`
      - *string*
      - The Firewall's label, for display purposes only.
    * - :code:`--tags`
      - *array[string]*
      - An array of tags applied to this object.
    * - :code:`--updated`
      - *string*
      - When this Firewall was last updated.


------------

.. _firewalls_update:

`update <https://techdocs.akamai.com/linode-api/reference/put-firewall>`_
-------------------------------------------------------------------------


Updates information for a Firewall.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls update [-h] [--tags tags] [--label label]
    	[--status status] firewallId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls update 123 \
    	--status disabled


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.

.. cssclass:: action-subheading

    .. rubric:: Arguments

:action-subheading-description:`Additional fields used to execute this request.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 10 65

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--label`
      - No
      - string
      - The Firewall's label, for display purposes only.
    * - :code:`--status`
      - No
      - string
      - The status to be applied to this Firewall.
    * - :code:`--tags`
      - No
      - array[string]
      - An array of tags applied to this object.


------------

.. _firewalls_view:

`view <https://techdocs.akamai.com/linode-api/reference/get-firewall>`_
-----------------------------------------------------------------------


Get a specific Firewall resource by its ID.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls view [-h] [--created created] [--tags [tags] ]
    	[--id id] [--updated updated] [--label label]
    	[--order-by {created,tags,id,updated,label}]
    	[--order {asc,desc}] firewallId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls view 123


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.


------------

.. _firewalls_device-create:

`device-create <https://techdocs.akamai.com/linode-api/reference/post-firewall-device>`_
----------------------------------------------------------------------------------------


Creates a Firewall Device, which assigns a Firewall to a service (referred to as the Device's :code:`entity`) and applies the Firewall's Rules to the device.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls device-create [-h] [--id id] [--type type]
    	firewallId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls device-create 123 \
    	--id 456 \
    	--type "linode"


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.

.. cssclass:: action-subheading

    .. rubric:: Arguments

:action-subheading-description:`Additional fields used to execute this request.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 10 65

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--id`
      - :action-argument-required:`Yes`
      - integer
      - The entity's ID.
    * - :code:`--type`
      - :action-argument-required:`Yes`
      - string
      - The entity's type.
    * - :code:`--label`
      - No
      - string
      - The entity's label.
    * - :code:`--url`
      - No
      - string
      - The API URL path you can use to access this entity.


------------

.. _firewalls_device-delete:

`device-delete <https://techdocs.akamai.com/linode-api/reference/delete-firewall-device>`_
------------------------------------------------------------------------------------------


Removes a Firewall Device, which removes a Firewall from the service it was assigned to by the Device.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls device-delete [-h] firewallId deviceId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls device-delete 123 456


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.
    * - :code:`deviceId`
      - integer
      - ID of the Firewall Device to access.


------------

.. _firewalls_device-view:

`device-view <https://techdocs.akamai.com/linode-api/reference/get-firewall-device>`_
-------------------------------------------------------------------------------------


Returns information for a Firewall Device, which assigns a Firewall to a service (referred to as the Device's :code:`entity`).

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls device-view [-h] [--updated updated]
    	[--created created] [--id id]
    	[--order-by {updated,created,id}] [--order {asc,desc}]
    	firewallId deviceId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls device-view \
    	123 456


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.
    * - :code:`deviceId`
      - integer
      - ID of the Firewall Device to access.


------------

.. _firewalls_devices-list:

`devices-list <https://techdocs.akamai.com/linode-api/reference/get-firewall-devices>`_
---------------------------------------------------------------------------------------


Returns a paginated list of a Firewall's Devices.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls devices-list [-h] [--id id]
    	[--updated updated] [--created created]
    	[--order-by {id,updated,created}] [--order {asc,desc}]
    	firewallId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls devices-list 123


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.

.. rubric:: Filterable Attributes

`Arguments used to define a filter for response entries.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`--created`
      - *string*
      - When this Device was created.
    * - :code:`--id`
      - *integer*
      - The Device's unique ID.
    * - :code:`--updated`
      - *string*
      - When this Device was last updated.


------------

.. _firewalls_rules-list:

`rules-list <https://techdocs.akamai.com/linode-api/reference/get-firewall-rules>`_
-----------------------------------------------------------------------------------


Returns the inbound and outbound Rules for a Firewall.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls rules-list [-h] [--order-by {}]
    	[--order {asc,desc}] firewallId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls rules-list 123


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.



.. _firewalls_rules-update:

`rules-update <https://techdocs.akamai.com/linode-api/reference/put-firewall-rules>`_
-------------------------------------------------------------------------------------


Updates the inbound and outbound Rules for a Firewall.

.. cssclass:: action-subheading

    .. rubric:: Usage

:action-subheading-description:`The format accepted by this command.`

..  code-block:: bash

    linode-cli firewalls rules-update [-h] [--outbound outbound]
    	[--inbound inbound] [--outbound_policy outbound_policy]
    	[--inbound_policy inbound_policy] firewallId


.. cssclass:: action-subheading

    .. rubric:: Sample

:action-subheading-description:`Examples of how this command might be used.`


..  code-block:: bash

    linode-cli firewalls rules-update 123 \
    	--inbound '[{"action":"ACCEPT", "protocol": "TCP", "ports": "22, 80, 8080, 443", "addresses": {"ipv4": ["192.0.2.0/24", "198.51.100.2/32"], "ipv6": ["2001:DB8::/128"]}}]' \
    	--outbound '[{"action":"DROP","protocol": "TCP", "ports": "49152-65535", "addresses": {"ipv4": ["192.0.2.0/24", "198.51.100.2/32"], "ipv6": ["2001:DB8::/128`"]}}]'


.. cssclass:: action-subheading

    .. rubric:: Parameters

:action-subheading-description:`Positional parameters used to define the resource this command should target.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 75

    * - Name
      - Type
      - Description

    * - :code:`firewallId`
      - integer
      - ID of the Firewall to access.

.. cssclass:: action-subheading

    .. rubric:: Arguments

:action-subheading-description:`Additional fields used to execute this request.`

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 15 10 10 65

    * - Name
      - Required
      - Type
      - Description

    * - :code:`--inbound`
      - No
      - object
      - The inbound rules for the firewall, as a JSON array.
    * - :code:`--inbound_policy`
      - No
      - string
      - The default behavior for inbound traffic.
    * - :code:`--outbound`
      - No
      - object
      - The outbound rules for the firewall, as a JSON array.
    * - :code:`--outbound_policy`
      - No
      - string
      - The default behavior for outbound traffic.



